tests/compError/addString.ucl
// compError
// error: expected type __builtin:Number(), but got type __builtin:String()
// line:7 -> on right of '+' operator
// error: expected type __builtin:Number(), but got type __builtin:String()
// line:8 -> on left of '+' operator

1 + ""
"" + 2